src/styles.css
:root{
    --primary-color:#6c63ff;
    --heading-font-family:'Playfair Display', serif;
    --default-font-family:'Poppins', serif;
    --secondary-color: #f9f7fe;
}

body{
    font-family: var(--default-font-family);
}
h1, h2, h3, h4, h5, h6{
    color: black;
    font-family: var(--default-font-family);
    font-weight: bold;
}
h1{
    font-size: 96px;
}
h2{
    font-size: 60px;
}
h3{
    font-size: 48px;
}
p{
    font-size: 16px;
    line-height: 30px;
}

img{
    width: 400px;
    border-radius: 10px;
}
.col{
    display: flex;
    justify-content: space-evenly;
}

.hero{
    background: var(--secondary-color);
    text-align: center;
    padding: 80px 20px;
}
.hero p{
        font-size: 36px;
        font-weight: bold;
        margin: 0;
        color: #272142;
        line-height: 1.5;
}
.hero h2{
    font-family: var(--default-font-family);
    font-weight: normal;
    font-size: 24px;
    line-height: 2;
}

.btn-branding{
    background: var(--primary-color);
    border-radius: 4px;
    color: white;
    font-size: 18px;
    line-height: 27px;
    padding: 12px 20px;
}

.btn-branding-outline{
    background: var(--secondary-color);
    border: 1px solid var(--primary-color);
        border-radius: 4px;
        color: var(--primary-color);
        font-size: 18px;
        line-height: 27px;
        padding: 12px 20px;
}
.btn:hover{
    color: #212529;
    background: var(--secondary-color);
        border: 1px solid var(--primary-color);
        border-radius: 4px;

}
.my-photos img{
    border-radius: 0px;
    padding: 10px;
}
.wide-image img {
    width: 60%;
    border-radius: 0px;
}
nav {
    padding: 20px;
}
nav ul{
    padding: 0;
    margin: 0;
}
nav li{
    display: inline;
    list-style: none;
    line-height: 2;
    margin-left: 15px;
}

nav a{
    text-decoration: none;
color: #272142;
transition: all 100ms ease-in-out;}

nav a:hover,
nav li.active a,
footer .email-link:hover{
    color: var(--primary-color);
}
nav p{
    font-weight: bold;
}

footer .email-link{
    text-decoration: none;
    color: black;
    font-size: 24px;
    text-align: center;
}
footer .social-links a{
    margin: 0 20px;
    color: var(--primary-color);
    background: var(--secondary-color);
    padding: 10px 14px;
    font-size: 18px;
    border-radius: 50%;
}
footer .social-links a:hover{
    color: white;
    background: var(--primary-color);
}

footer .contact-box{
    background: var(--secondary-color);
    padding: 30px 60px;
    margin: 30px 0;
    border-radius: 10px;
}

footer .contact-box p{
    margin: 0;
}

@media (max-width: 900px){
    h1{
        font-size:44px;
    }
    h2{
        font-size: 36px;
    }
    .project-description{
        padding: 0;
        text-align: center;
    }
    .content-container h1 {
        text-align: center;
    }
    nav a{
        font-size: 14px;
    }
    nav p{
        display: none;
    }
    footer .contact-box {
        padding: 30px;
    }
    h3{
        font-size: 26px;
    }
    .btn{
        font-size: 18px;
    }

}

.content-container{
    padding: 60px 0px;
}
.content h1 {
    font-size: 64px;
    line-height: 1.5;
}
.content h2 {
    font-size: 18px;
    line-height: 1.5;
    font-family: var(--default-font-family);
}
.content h2 {
    font-size: 24px;
        font-family: var(--default-font-family);
}
.content h3{
    font-size: 24px;
    line-height: 1.5;
    margin: 20px 0 0;
    font-family: var(--default-font-family);
}
.content p{
    font-size: 14px;
}
.content{
    margin: 30px;
}

